src/rules/snapshots/tests__deserialize_mix.snap
---
created: "2019-03-03T22:38:28.542901Z"
creator: insta@0.6.3
source: src/rules/tests.rs
expression: actual
---
[
    Course(
        Rule {
            course: "ASIAN 101",
            grade: None,
            section: None,
            year: None,
            semester: None,
            lab: None,
            can_match_used: None
        }
    ),
    Course(
        Rule {
            course: "ASIAN 101",
            grade: None,
            section: None,
            year: Some(
                2014
            ),
            semester: Some(
                Fall
            ),
            lab: None,
            can_match_used: None
        }
    ),
    Requirement(
        Rule {
            name: "Name",
            optional: true
        }
    ),
    CountOf(
        Rule {
            count: Number(
                1
            ),
            of: [
                Course(
                    Rule {
                        course: "ASIAN 101",
                        grade: None,
                        section: None,
                        year: None,
                        semester: None,
                        lab: None,
                        can_match_used: None
                    }
                )
            ]
        }
    ),
    Both(
        Rule {
            both: (
                Course(
                    Rule {
                        course: "ASIAN 101",
                        grade: None,
                        section: None,
                        year: None,
                        semester: None,
                        lab: None,
                        can_match_used: None
                    }
                ),
                Course(
                    Rule {
                        course: "ASIAN 101",
                        grade: None,
                        section: None,
                        year: Some(
                            2014
                        ),
                        semester: Some(
                            Fall
                        ),
                        lab: None,
                        can_match_used: None
                    }
                )
            )
        }
    ),
    Either(
        Rule {
            either: (
                Course(
                    Rule {
                        course: "ASIAN 101",
                        grade: None,
                        section: None,
                        year: None,
                        semester: None,
                        lab: None,
                        can_match_used: None
                    }
                ),
                Course(
                    Rule {
                        course: "ASIAN 101",
                        grade: None,
                        section: None,
                        year: Some(
                            2014
                        ),
                        semester: Some(
                            Fall
                        ),
                        lab: None,
                        can_match_used: None
                    }
                )
            )
        }
    ),
    Given(
        Rule {
            given: AllCourses {
                what: Courses,
                filter: Some(
                    CourseClause {
                        attribute: None,
                        course: None,
                        credits: None,
                        gereqs: None,
                        graded: None,
                        grade: None,
                        institution: None,
                        level: None,
                        number: None,
                        type: None,
                        semester: None,
                        subject: None,
                        year: None
                    }
                ),
                limit: Some(
                    []
                )
            },
            action: Action {
                lhs: Count,
                op: Some(
                    LessThan
                ),
                rhs: Some(
                    Integer(
                        2
                    )
                )
            }
        }
    ),
    Do(
        Rule {
            action: LhsValueAction {
                lhs: String(
                    "a"
                ),
                op: Some(
                    LessThan
                ),
                rhs: Some(
                    String(
                        "b"
                    )
                )
            }
        }
    )
]
