src/rules/snapshots/tests__pretty_print_mix.snap
---
created: "2019-02-27T17:36:11.687184Z"
creator: insta@0.6.3
source: src/rules/tests.rs
expression: actual
---
[
    "take ASIAN 101",
    "take ASIAN 101",
    "take ASIAN 102 (Fall 2014)",
    "complete the “Name 1” requirement",
    "complete the “Name 2” (optional) requirement",
    "take ASIAN 101",
    "take both ASIAN 101 and ASIAN 102 (Fall 2014)",
    "take either ASIAN 101 or ASIAN 102 (Fall 2014)",
    "take fewer than two courses",
    "ensure that the computed result of the subset “X” is less than the computed result of the subset “Y”"
]
