src/rules/snapshots/tests__serialize_mix_1.snap
---
created: "2019-03-09T20:36:53.758085Z"
creator: insta@0.6.3
source: src/rules/tests.rs
expression: data
---
- type: course
  course: ASIAN 101
- type: course
  course: ASIAN 101
  grade: ~
  section: ~
  year: 2014
  semester: Fall
  lab: ~
  can_match_used: ~
- type: requirement
  name: Name
  optional: true
- type: count-of
  count: 1
  of:
    - type: course
      course: ASIAN 101
- type: both
  both:
    - type: course
      course: ASIAN 101
    - type: course
      course: ASIAN 101
      grade: ~
      section: ~
      year: 2014
      semester: Fall
      lab: ~
      can_match_used: ~
- type: either
  either:
    - type: course
      course: ASIAN 101
    - type: course
      course: ASIAN 101
      grade: ~
      section: ~
      year: 2014
      semester: Fall
      lab: ~
      can_match_used: ~
- type: given
  given: courses
  what: courses
  where: {}
  limit: []
  action:
    count:
      Single:
        LessThan: 2
- type: do
  do:
    lhs:
      String: a
    op: LessThan
    rhs:
      String: b
